--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mb-2 mb-lg-0" style="width: 600px;">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
@@ -49,8 +49,8 @@
           </ul>
             <div class="navbar-nav icon-list" style="justify-content:center;">
               <a href="/pages/productos/productos-principal.html" class="nav-link" aria-current="page"><i class="fas fa-cart-shopping"></i></a>
-              <a href="index.html" class="nav-link" aria-current="page"><i class="fas fa-user"></i></a>
-              <a href="/pages/productos.html" class="nav-link"><i class="fas fa-magnifying-glass"></i></a>
+              <a href="/index.html" class="nav-link" aria-current="page"><i class="fas fa-user"></i></a>
+              <a href="/pages/productos/productos-principal.html" class="nav-link"><i class="fas fa-magnifying-glass"></i></a>
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@
         </svg>
         <p class="text-fav">Vela Coco y Vainilla</h2>
         <p>Sumérgete en la indulgencia con la Vela Coco y Vainilla de Lumina, una mezcla reconfortante que llena tu hogar de calidez y dulzura.</p>
-        <a class="btn btn-outline-dark" style="--bs-btn-padding-y: .50rem; --bs-btn-padding-x: .5rem;" href="/pages/productos/productos-principal.html" role="button">Comprar Ahora</a>
+        <a class="btn btn-outline-dark" style="--bs-btn-padding-y: .50rem; --bs-btn-padding-x: .5rem;" href="/pages/productos/productos-principal.html role="button">Comprar Ahora</a>
         </div><!-- /.col-lg-4 -->
     </div>
         </div><!-- /.row -->
@@ -156,7 +156,7 @@
                       </div>
                       <div class="carousel-item">
                         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                          <image href="assets/landingpage-assets/carrusel-3.jpg" width="100%" height="100%" preserveAspectRatio="xMidYMid slice" />
+                          <image href="/assets/landingpage-assets/carrusel-3.jpg" width="100%" height="100%" preserveAspectRatio="xMidYMid slice" />
                         </svg>                        
                         <div class="container">
                           <div class="carousel-caption text-end">
