--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -13,44 +13,44 @@
     <header class="header header-hero">
     <nav class="navbar navbar-expand-lg px-4 py-2" style="background-color: #F6F6F6;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Lumina</a>
+        <a class="navbar-brand" href="./index.html">Lumina</a>
         <button class="navbar-toggler btn-light" type="button" style="height: 40px;" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mb-2 mb-lg-0" style="width: 600px;">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
+              <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/pages/productos/productos-principal.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="./pages/productos/productos-principal.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Productos</a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="/pages/productos/productos-principal.html">Todos</a>
+                  <a class="dropdown-item" href="./pages/productos/productos-principal.html">Todos</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/pages/productos/velas.html">Velas</a>
+                  <a class="dropdown-item" href="./pages/productos/velas.html">Velas</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/pages/productos/esencias.html">Esencias</a>
+                  <a class="dropdown-item" href="./pages/productos/esencias.html">Esencias</a>
                 </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-disabled="true" href="/pages/blog.html">Blog</a>
+              <a class="nav-link" aria-disabled="true" href="./pages/blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/pages/contacto.html">Contacto</a>
+              <a class="nav-link" aria-current="page" href="./pages/contacto.html">Contacto</a>
             </li>
           </ul>
             <div class="navbar-nav icon-list" style="justify-content:center;">
-              <a href="/pages/productos/productos-principal.html" class="nav-link" aria-current="page"><i class="fas fa-cart-shopping"></i></a>
-              <a href="/index.html" class="nav-link" aria-current="page"><i class="fas fa-user"></i></a>
-              <a href="/pages/productos/productos-principal.html" class="nav-link"><i class="fas fa-magnifying-glass"></i></a>
+              <a href="./pages/productos/productos-principal.html" class="nav-link" aria-current="page"><i class="fas fa-cart-shopping"></i></a>
+              <a href="./index.html" class="nav-link" aria-current="page"><i class="fas fa-user"></i></a>
+              <a href="./pages/productos/productos-principal.html" class="nav-link"><i class="fas fa-magnifying-glass"></i></a>
             </div>
           </div>
         </div>
@@ -60,7 +60,7 @@
           <p class="text-slogan mb-4">Aromas que iluminan tu espacio</p>
       </div>
       <div class="boton-container">
-        <a class="btn btn-outline-dark" style="--bs-btn-padding-y: .50rem; --bs-btn-padding-x: .5rem;" href="/pages/productos/productos-principal.html" role="button">Comprar Ahora</a>
+        <a class="btn btn-outline-dark" style="--bs-btn-padding-y: .50rem; --bs-btn-padding-x: .5rem;" href="./pages/productos/productos-principal.html" role="button">Comprar Ahora</a>
       </div>
   </div>
     </header>
@@ -73,7 +73,7 @@
           <!-- Rectángulo oscuro -->
           <rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <!-- Imagen rectangular -->
-          <image href="/assets/landingpage-assets/Esencia Serenidad de Lavanda 1.jpg" width="100%" height="100%" preserveAspectRatio="none" clip-path="url(#rounded-clip)" />
+          <image href="./assets/landingpage-assets/Esencia Serenidad de Lavanda 1.jpg" width="100%" height="100%" preserveAspectRatio="none" clip-path="url(#rounded-clip)" />
           <!-- Define un clipPath para dar forma redondeada a la imagen -->
           <defs>
             <clipPath id="#rounded-clip" clipPathUnits="objectBoundingBox">
@@ -83,14 +83,14 @@
         </svg>
         <p class="text-fav">Serenidad de Lavanda</p>
         <p>Experimenta la calma con nuestra Esencia Serenidad de Lavanda, una fragancia que envuelve tu espacio en tranquilidad natural.</p>
-        <a class="btn btn-outline-dark" style="--bs-btn-padding-y: .50rem; --bs-btn-padding-x: .5rem;" href="/pages/productos/productos-principal.html" role="button">Comprar Ahora</a>
+        <a class="btn btn-outline-dark" style="--bs-btn-padding-y: .50rem; --bs-btn-padding-x: .5rem;" href="./pages/productos/productos-principal.html" role="button">Comprar Ahora</a>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <svg class="bd-placeholder-img" width="200" height="280" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
           <!-- Rectángulo oscuro -->
           <rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <!-- Imagen rectangular -->
-          <image href="/assets/landingpage-assets/Vela Limón Verbena 4.jpg" width="100%" height="100%" preserveAspectRatio="none" clip-path="url(#rounded-clip)" />
+          <image href="./assets/landingpage-assets/Vela Limón Verbena 4.jpg" width="100%" height="100%" preserveAspectRatio="none" clip-path="url(#rounded-clip)" />
           <!-- Define un clipPath para dar forma redondeada a la imagen -->
           <defs>
             <clipPath id="#rounded-clip" clipPathUnits="objectBoundingBox">
@@ -100,14 +100,14 @@
         </svg> 
         <p class="text-fav">Vela Limón Verbena</h2>
         <p>Infunde frescura y vitalidad en tu hogar con la Vela Limón Verbena de Lumina, una fusión cítrica que revitaliza tus sentidos.</p>
-        <a class="btn btn-outline-dark" style="--bs-btn-padding-y: .50rem; --bs-btn-padding-x: .5rem;" href="/pages/productos/productos-principal.html" role="button">Comprar Ahora</a>
+        <a class="btn btn-outline-dark" style="--bs-btn-padding-y: .50rem; --bs-btn-padding-x: .5rem;" href="./pages/productos/productos-principal.html" role="button">Comprar Ahora</a>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <svg class="bd-placeholder-img" width="200" height="280" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
           <!-- Rectángulo oscuro -->
           <rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <!-- Imagen rectangular -->
-          <image href="/assets/landingpage-assets/Vela Coco y Vainilla 2.jpg" width="100%" height="100%" preserveAspectRatio="none" clip-path="url(#rounded-clip)" />
+          <image href="./assets/landingpage-assets/Vela Coco y Vainilla 2.jpg" width="100%" height="100%" preserveAspectRatio="none" clip-path="url(#rounded-clip)" />
           <!-- Define un clipPath para dar forma redondeada a la imagen -->
           <defs>
             <clipPath id="#rounded-clip" clipPathUnits="objectBoundingBox">
@@ -117,7 +117,7 @@
         </svg>
         <p class="text-fav">Vela Coco y Vainilla</h2>
         <p>Sumérgete en la indulgencia con la Vela Coco y Vainilla de Lumina, una mezcla reconfortante que llena tu hogar de calidez y dulzura.</p>
-        <a class="btn btn-outline-dark" style="--bs-btn-padding-y: .50rem; --bs-btn-padding-x: .5rem;" href="/pages/productos/productos-principal.html role="button">Comprar Ahora</a>
+        <a class="btn btn-outline-dark" style="--bs-btn-padding-y: .50rem; --bs-btn-padding-x: .5rem;" href="./pages/productos/productos-principal.html" role="button">Comprar Ahora</a>
         </div><!-- /.col-lg-4 -->
     </div>
         </div><!-- /.row -->
@@ -132,19 +132,19 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                          <image href="/assets/landingpage-assets/carrusel-1.jpg" width="100%" height="100%" preserveAspectRatio="xMidYMid slice" />
+                          <image href="./assets/landingpage-assets/carrusel-1.jpg" width="100%" height="100%" preserveAspectRatio="xMidYMid slice" />
                         </svg>
                       <div class="container">
                           <div class="carousel-caption text-start">
                             <p class="subtitulo-carousel text-start">Despierta tus Sentidos</p>
                             <p class="descripcion-carousel text-start">Descubre el arte de iluminar tu espacio con nuestras velas y esencias. Sumérgete en la experiencia única que ofrecen y descubre cómo transforman cada instante en pura magia.</p>
-                            <p class="text-start"><a class="btn btn-outline-dark" href="/pages/productos/productos-principal.html">Leer Más</a></p>
+                            <p class="text-start"><a class="btn btn-outline-dark" href="./pages/productos/productos-principal.html">Leer Más</a></p>
                           </div>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                          <image href="/assets/landingpage-assets/carrusel-2.jpg" width="100%" height="100%" preserveAspectRatio="xMidYMid slice" />
+                          <image href="./assets/landingpage-assets/carrusel-2.jpg" width="100%" height="100%" preserveAspectRatio="xMidYMid slice" />
                         </svg>                        
                         <div class="container">
                           <div class="carousel-caption">
@@ -156,7 +156,7 @@
                       </div>
                       <div class="carousel-item">
                         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                          <image href="/assets/landingpage-assets/carrusel-3.jpg" width="100%" height="100%" preserveAspectRatio="xMidYMid slice" />
+                          <image href="./assets/landingpage-assets/carrusel-3.jpg" width="100%" height="100%" preserveAspectRatio="xMidYMid slice" />
                         </svg>                        
                         <div class="container">
                           <div class="carousel-caption text-end">
