--- a/pages/productos/productos-principal.html
+++ b/pages/productos/productos-principal.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="../../index.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -13,44 +13,44 @@
     <header>
       <nav class="navbar navbar-expand-lg px-4 py-3" style="background-color: #F6F6F6;">
         <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Lumina</a>
+        <a class="navbar-brand" href="../../index.html>Lumina</a>
         <button class="navbar-toggler btn-light" type="button" style="height: 40px;" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mb-2 mb-lg-0" style="width: 600px;">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="../../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
+              <a class="nav-link" href="../../pages/nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/pages/productos/productos-principal.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="../../pages/productos/productos-principal.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Productos</a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="/pages/productos/productos-principal.html">Todos</a>
+                  <a class="dropdown-item" href="../../pages/productos/productos-principal.html">Todos</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/pages/productos/velas.html">Velas</a>
+                  <a class="dropdown-item" href="../../pages/productos/velas.html">Velas</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/pages/productos/esencias.html">Esencias</a>
+                  <a class="dropdown-item" href="../../pages/productos/esencias.html">Esencias</a>
                 </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-disabled="true" href="/pages/blog.html">Blog</a>
+              <a class="nav-link" aria-disabled="true" href="../../pages/blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/pages/contacto.html">Contacto</a>
+              <a class="nav-link" aria-current="page" href="../../pages/contacto.html">Contacto</a>
             </li>
           </ul>
             <div class="navbar-nav icon-list" style="justify-content:center;">
-              <a href="/pages/productos/productos-principal.html" class="nav-link" aria-current="page"><i class="fas fa-cart-shopping"></i></a>
-              <a href="/index.html" class="nav-link" aria-current="page"><i class="fas fa-user"></i></a>
-              <a href="/pages/productos.html" class="nav-link"><i class="fas fa-magnifying-glass"></i></a>
+              <a href="../../pages/productos/productos-principal.html" class="nav-link" aria-current="page"><i class="fas fa-cart-shopping"></i></a>
+              <a href="../../index.html" class="nav-link" aria-current="page"><i class="fas fa-user"></i></a>
+              <a href="../../pages/productos/productos-principal.html" class="nav-link"><i class="fas fa-magnifying-glass"></i></a>
             </div>
           </div>
         </div>
@@ -165,7 +165,7 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                   <div class="col">
                     <div class="card shadow-sm">
-                      <img src="/assets/productos/Esencia Serenidad Lavanda.png" class="card-img-top" alt="Esencia Serenidad de Lavanda">
+                      <img src="../../assets/productos/Esencia Serenidad Lavanda.png" class="card-img-top" alt="Esencia Serenidad de Lavanda">
                         <div class="card-body">
                           <p class="card-text text-start">Esencia Serenidad Lavanda</p>
                           <div class="d-flex justify-content-between align-items-center">
@@ -179,7 +179,7 @@
                   </div>
                   <div class="col">
                     <div class="card shadow-sm">
-                      <img src="/assets/productos/Esencia Limón Verbena.png" class="card-img-top" alt="Esencia Limón Verbena">
+                      <img src="../../assets/productos/Esencia Limón Verbena.png" class="card-img-top" alt="Esencia Limón Verbena">
                         <div class="card-body">
                           <p class="card-text text-start">Esencia Limón Verbena</p>
                           <div class="d-flex justify-content-between align-items-center">
@@ -193,7 +193,7 @@
                   </div>
                   <div class="col">
                 <div class="card shadow-sm">
-                  <img src="/assets/productos/Esencia Jazmín Floral.png" class="card-img-top" alt="Esencia Jazmín Floral">
+                  <img src="../../assets/productos/Esencia Jazmín Floral.png" class="card-img-top" alt="Esencia Jazmín Floral">
                   <div class="card-body">
                     <p class="card-text text-start">Esencia Jazmín Floral</p>
                     <div class="d-flex justify-content-between align-items-center">
@@ -207,7 +207,7 @@
                   </div>
               <div class="col">
               <div class="card shadow-sm">
-                <img src="/assets/productos/Esencia Vainilla.png" class="card-img-top" alt="Esencia Vainilla">
+                <img src="../../assets/productos/Esencia Vainilla.png" class="card-img-top" alt="Esencia Vainilla">
                 <div class="card-body">
                   <p class="card-text text-start">Esencia Vainilla</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -221,7 +221,7 @@
               </div>
             <div class="col">
             <div class="card shadow-sm">
-              <img src="/assets/productos/Esencia Rosas Silvestres.png" class="card-img-top" alt="Esencia Rosas Silvestres">
+              <img src="../../assets/productos/Esencia Rosas Silvestres.png" class="card-img-top" alt="Esencia Rosas Silvestres">
               <div class="card-body">
                   <p class="card-text text-start">Esencia Rosas Silvestres</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -235,7 +235,7 @@
             </div>
             <div class="col">
           <div class="card shadow-sm">
-            <img src="/assets/productos/Esencia Eucalipto y Menta.png" class="card-img-top" alt="Esencia Eucalipto y Menta">
+            <img src="../../assets/productos/Esencia Eucalipto y Menta.png" class="card-img-top" alt="Esencia Eucalipto y Menta">
             <div class="card-body">
               <p class="card-text text-start">Esencia Eucalipto y Menta</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -249,7 +249,7 @@
             </div>
         <div class="col">
         <div class="card shadow-sm">
-          <img src="/assets/productos/Vela Jazmín Floral.png" class="card-img-top" alt="Vela Jazmín Floral">
+          <img src="../../assets/productos/Vela Jazmín Floral.png" class="card-img-top" alt="Vela Jazmín Floral">
           <div class="card-body">
             <p class="card-text text-start">Vela Jazmín Floral</p>
             <div class="d-flex justify-content-between align-items-center">
@@ -263,7 +263,7 @@
         </div>
       <div class="col">
       <div class="card shadow-sm">
-        <img src="/assets/productos/Vela Coco y Vainilla.png" class="card-img-top" alt="Vela Coco y Vainilla">
+        <img src="../../assets/productos/Vela Coco y Vainilla.png" class="card-img-top" alt="Vela Coco y Vainilla">
         <div class="card-body">
           <p class="card-text text-start">Vela Coco y Vainilla</p>
           <div class="d-flex justify-content-between align-items-center">
@@ -277,7 +277,7 @@
       </div>
       <div class="col">
     <div class="card shadow-sm">
-      <img src="/assets/productos/Vela Serenidad Lavanda.png" class="card-img-top" alt="Vela Serenidad Lavanda">
+      <img src="../../assets/productos/Vela Serenidad Lavanda.png" class="card-img-top" alt="Vela Serenidad Lavanda">
       <div class="card-body">
         <p class="card-text text-start">Vela Serenidad Lavanda</p>
         <div class="d-flex justify-content-between align-items-center">
@@ -291,7 +291,7 @@
     </div>
     <div class="col">
       <div class="card shadow-sm">
-        <img src="/assets/productos/Vela Limón Verbena.png" class="card-img-top" alt="Vela Limón Verbena">
+        <img src="../../assets/productos/Vela Limón Verbena.png" class="card-img-top" alt="Vela Limón Verbena">
         <div class="card-body">
           <p class="card-text text-start">Vela Limón Verbena</p>
           <div class="d-flex justify-content-between align-items-center">
@@ -305,7 +305,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="/assets/productos/Vela Rosas Silvestres.png" class="card-img-top" alt="Vela Rosas Silvestres">
+          <img src="../../assets/productos/Vela Rosas Silvestres.png" class="card-img-top" alt="Vela Rosas Silvestres">
           <div class="card-body">
             <p class="card-text text-start">Vela Rosas Silvestres</p>
             <div class="d-flex justify-content-between align-items-center">
@@ -319,7 +319,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="/assets/productos/Vela Eucalipto y Menta.png" class="card-img-top" alt="Vela Eucalipto y Menta">
+            <img src="../../assets/productos/Vela Eucalipto y Menta.png" class="card-img-top" alt="Vela Eucalipto y Menta">
             <div class="card-body">
               <p class="card-text text-start">Vela Eucalipto y Menta</p>
               <div class="d-flex justify-content-between align-items-center">
