--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -72,7 +72,7 @@
             <p class="lead">En Lumina, cada vela y esencia natural se crea con esmero artesanal. Nuestras velas se elaboran con cera de soja, vertida a mano para garantizar calidad y textura. Las esencias, cuidadosamente seleccionadas, son mezclas naturales que capturan la esencia de la serenidad. Cada paso del proceso, desde la elección de ingredientes hasta la cuidada elaboración, refleja nuestra dedicación a la excelencia y a ofrecer experiencias sensoriales únicas. Lumina, donde la luz se convierte en arte..</p>
         </div>
         <div class="col-md-6 py-5">
-            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../assets/nosotros-assets/nosotros2.png" alt="Imagen del Proceso">
+            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="/assets/nosotros-assets/nosotros2.png" alt="Imagen del Proceso">
         </div>
         </div>
     </div>
