--- a/pages/productos/productos-principal.html
+++ b/pages/productos/productos-principal.html
@@ -13,7 +13,7 @@
     <header>
       <nav class="navbar navbar-expand-lg px-4 py-3" style="background-color: #F6F6F6;">
         <div class="container-fluid">
-        <a class="navbar-brand" href="../../index.html>Lumina</a>
+        <a class="navbar-brand" href="../../index.html">Lumina</a>
         <button class="navbar-toggler btn-light" type="button" style="height: 40px;" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
