--- a/pages/productos/velas.html
+++ b/pages/productos/velas.html
@@ -36,7 +36,7 @@
                   <a class="dropdown-item" href="../../pages/productos/velas.html">Velas</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../../pages/productos/velas.html">Esencias</a>
+                  <a class="dropdown-item" href="../../pages/productos/esencias.html">Esencias</a>
                 </li>
               </ul>
             </li>
