--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -154,7 +154,7 @@
 <footer>
   <section class="footer-container" style="background:#F6F6F6;">
     <div class="container">
-      <footer class="py-5">
+      <div class="py-5">
         <div class="row">
           <div class="col-12 col-md-2 mb-3">
             <h5>Lumina</h5>
@@ -191,7 +191,7 @@
             <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
           </ul>
         </div>
-      </footer>
+      </div>
     </div>
   </section>
 </footer>
