--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Lumina Shop</title>
+    <meta name="description" content="Descubre reseñas y consejos de cuidado personal en nuestro blog de Lumina Shop.">
+    <meta name="author" content="By Fiamma Li">
+    <meta name="keywords" content="esencias, velas orgánicas, cuidado personal, bienestar emocional, productos naturales">
+
+    <meta property="og:title" content="Lumina Shop">
+    <meta property="og:description" content="Tienda online de esencias y velas hechas a mano. Encuentra productos sostenibles y un blog dedicado al cuidado emocional y físico.">
+
+    <title>blog - Lumina Shop</title>
   </head>
   <body>
     <header">
